--- a/page03.html
+++ b/page03.html
@@ -9,7 +9,7 @@ Zeeby's Website
 <body bgcolor="#F1948A">
 <h1>I'm still typing!</h1>
 <p>
-<a href="page01.html"><button type="button">GO AWAY!!!</button></a>
+<a href="index.html"><button type="button">GO AWAY!!!</button></a>
 </p>
 <img src="typing.gif" alt="Typing" width="100%">
 </body>
